--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://narela99.github.io/TaTeti",
+  "homepage": "https://narela99.github.io/TaTeti/",
   "name": "client",
   "version": "0.1.0",
   "private": true,
