--- a/client/package.json
+++ b/client/package.json
@@ -1,8 +1,8 @@
 {
-  "homepage": "https://narela99.github.io/TaTeti/",
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://narela99.github.io/TaTeTi/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
